MINOR CSS fixes for tabset in CMS: Removing vertical overflow, setting to position relative to avoid 'floating' TreeDropdownFields
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/cms/trunk@92586 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/cms_right.css
+++ b/css/cms_right.css
@@ -485,3 +485,17 @@ div.filterBox {
 .autocompleteoptions {
 	background-color: white;
 }
+
+/**
+ * Tabs
+ */
+.right form .ss-tabset {
+	width: 100%;
+	/* Need this to stop tabs from disappearing sometimes */
+	position: relative;
+}
+
+	.right form .ss-tabset .tab {
+		position: relative;
+		overflow-x: hidden;
+	}
